--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,17 +34,24 @@ file.reference.hsqldb.jar=lib/hsqldb.jar
 file.reference.jxl.jar=lib\\jxl.jar
 file.reference.mysql-connector-java-5.0.8-bin.jar=lib/mysql-connector-java-5.0.8-bin.jar
 file.reference.RXTXcomm.jar=lib/RXTXcomm.jar
+file.reference.hibernate.antlr-2.7.7.jar=lib/hibernate/antlr-2.7.7.jar
+file.reference.hibernate.c3p0-0.9.2.1.jar=lib/hibernate/c3p0-0.9.2.1.jar
+file.reference.hibernate.dom4j-1.6.1.jar=lib/hibernate/dom4j-1.6.1.jar
+file.reference.hibernate.hibernate-c3p0-4.3.5.Final.jar=lib/hibernate/hibernate-c3p0-4.3.5.Final.jar
+file.reference.hibernate.hibernate-commons-annotations-4.0.4.Final.jar=lib/hibernate/hibernate-commons-annotations-4.0.4.Final.jar
+file.reference.hibernate.hibernate-core-4.3.5.Final.jar=lib/hibernate/hibernate-core-4.3.5.Final.jar
+file.reference.hibernate.hibernate-entitymanager-4.3.5.Final.jar=lib/hibernate/hibernate-entitymanager-4.3.5.Final.jar
+file.reference.hibernate.hibernate-jpa-2.1-api-1.0.0.Final.jar=lib/hibernate/hibernate-jpa-2.1-api-1.0.0.Final.jar
+file.reference.hibernate.jandex-1.1.0.Final.jar=lib/hibernate/jandex-1.1.0.Final.jar
+file.reference.hibernate.javassist-3.18.1-GA.jar=lib/hibernate/javassist-3.18.1-GA.jar
+file.reference.hibernate.jboss-logging-3.1.3.GA.jar=lib/hibernate/jboss-logging-3.1.3.GA.jar
+file.reference.hibernate.jboss-logging-annotations-1.2.0.Beta1.jar=lib/hibernate/jboss-logging-annotations-1.2.0.Beta1.jar
+file.reference.hibernate.jboss-transaction-api_1.2_spec-1.0.0.Final.jar=lib/hibernate/jboss-transaction-api_1.2_spec-1.0.0.Final.jar
+file.reference.hibernate.mchange-commons-java-0.2.3.4.jar=lib/hibernate/mchange-commons-java-0.2.3.4.jar
+file.reference.beansbinding-1.2.1.jar=lib/beansbinding-1.2.1.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.barbecue-1.5-beta1.jar}:\
-    ${file.reference.GPSLib.jar}:\
-    ${file.reference.hsqldb.jar}:\
-    ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
-    ${file.reference.RXTXcomm.jar}:\
-    ${file.reference.jxl.jar}:\
-    ${file.reference.Fingerprint_SDK_Applet_Sample.jar}:\
-    ${file.reference.grfingerjava.jar}
+javac.classpath=${file.reference.hibernate.hibernate-core-4.3.5.Final.jar}\:${file.reference.hibernate.antlr-2.7.7.jar}\:${file.reference.hibernate.c3p0-0.9.2.1.jar}\:${file.reference.hibernate.dom4j-1.6.1.jar}\:${file.reference.hibernate.hibernate-c3p0-4.3.5.Final.jar}\:${file.reference.hibernate.hibernate-commons-annotations-4.0.4.Final.jar}\:${file.reference.hibernate.hibernate-entitymanager-4.3.5.Final.jar}\:${file.reference.hibernate.hibernate-jpa-2.1-api-1.0.0.Final.jar}\:${file.reference.hibernate.jandex-1.1.0.Final.jar}\:${file.reference.hibernate.javassist-3.18.1-GA.jar}\:${file.reference.hibernate.jboss-logging-3.1.3.GA.jar}\:${file.reference.hibernate.jboss-logging-annotations-1.2.0.Beta1.jar}\:${file.reference.hibernate.jboss-transaction-api_1.2_spec-1.0.0.Final.jar}\:${file.reference.hibernate.mchange-commons-java-0.2.3.4.jar}\:${file.reference.beansbinding-1.2.1.jar}\:${file.reference.barbecue-1.5-beta1.jar}\:${file.reference.GPSLib.jar}\:${file.reference.hsqldb.jar}\:${file.reference.mysql-connector-java-5.0.8-bin.jar}\:${file.reference.RXTXcomm.jar}\:${file.reference.jxl.jar}\:${file.reference.Fingerprint_SDK_Applet_Sample.jar}\:${file.reference.grfingerjava.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -52,11 +59,7 @@ javac.processorpath=\
     ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:${libs.junit.classpath}\:${libs.junit_4.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
@@ -69,21 +72,17 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
-main.class=Main.Main
+main.class=main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
+run.classpath=${javac.classpath}\:${build.classes.dir}
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
 run.jvmargs=
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
