--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -86,3 +86,4 @@ run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
+img.dir=img
